--- a/src/app.scss
+++ b/src/app.scss
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap");
+
 *,
 *::before,
 *::after {
@@ -11,6 +13,8 @@ body,
   height: 100%;
 }
 body {
+  font-family: "Poppins", sans-serif;
+  font-size: 16px;
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
 }
