refactor: image not found show

--- a/src/components/homepage/style.scss
+++ b/src/components/homepage/style.scss
@@ -20,6 +20,10 @@ main {
       text-align: center;
       color: red;
     }
+
+    .loading {
+      text-align: center;
+    }
     .upload-img {
       height: 100vh;
 
