--- a/src/components/loader/style.scss
+++ b/src/components/loader/style.scss
@@ -1,48 +1,160 @@
+// .loader {
+//   position: fixed;
+//   inset: 0;
+//   height: 100vh;
+//   width: 100vw;
+//   display: grid;
+//   place-items: center;
+
+//   .spinner {
+//     border: 16px solid #f3f3f3;
+//     border-radius: 50%;
+//     border-top: 16px solid #3498db;
+//     width: 120px;
+//     height: 120px;
+//     -webkit-animation: spin 2s linear infinite; /* Safari */
+//     animation: spin 2s linear infinite;
+//   }
+
+//   /* Safari */
+//   @-webkit-keyframes spin {
+//     0% {
+//       -webkit-transform: rotate(0deg);
+//     }
+//     100% {
+//       -webkit-transform: rotate(360deg);
+//     }
+//   }
+
+//   @keyframes spin {
+//     0% {
+//       transform: rotate(0deg);
+//     }
+//     100% {
+//       transform: rotate(360deg);
+//     }
+//   }
+// }
+
+// @media screen and (max-width: 700px) {
+//   .loader {
+//     .spinner {
+//       border: 10px solid #f3f3f3;
+//       border-top: 10px solid #3498db;
+//       width: 80px;
+//       height: 80px;
+//     }
+//   }
+// }
+
 .loader {
-  position: fixed;
-  inset: 0;
-  height: 100vh;
-  width: 100vw;
-  display: grid;
-  place-items: center;
-
-  .spinner {
-    border: 16px solid #f3f3f3;
+  --path: #2f3545;
+  --dot: #5628ee;
+  --duration: 3s;
+  width: 44px;
+  height: 44px;
+  position: relative;
+  &:before {
+    content: "";
+    width: 6px;
+    height: 6px;
     border-radius: 50%;
-    border-top: 16px solid #3498db;
-    width: 120px;
-    height: 120px;
-    -webkit-animation: spin 2s linear infinite; /* Safari */
-    animation: spin 2s linear infinite;
+    position: absolute;
+    display: block;
+    background: var(--dot);
+    top: 37px;
+    left: 19px;
+    transform: translate(-18px, -18px);
+    animation: dotRect var(--duration) cubic-bezier(0.785, 0.135, 0.15, 0.86)
+      infinite;
   }
-
-  /* Safari */
-  @-webkit-keyframes spin {
-    0% {
-      -webkit-transform: rotate(0deg);
+  svg {
+    display: block;
+    width: 100%;
+    height: 100%;
+    rect,
+    polygon,
+    circle {
+      fill: none;
+      stroke: var(--path);
+      stroke-width: 10px;
+      stroke-linejoin: round;
+      stroke-linecap: round;
     }
-    100% {
-      -webkit-transform: rotate(360deg);
+    polygon {
+      stroke-dasharray: 145 calc(221 - 145) 145 calc(221 - 145);
+      stroke-dashoffset: 0;
+      animation: pathTriangle var(--duration)
+        cubic-bezier(0.785, 0.135, 0.15, 0.86) infinite;
+    }
+    rect {
+      stroke-dasharray: calc(256 / 4 * 3) calc(256 / 4) calc(256 / 4 * 3)
+        calc(256 / 4);
+      stroke-dashoffset: 0;
+      animation: pathRect 3s cubic-bezier(0.785, 0.135, 0.15, 0.86) infinite;
     }
   }
-
-  @keyframes spin {
-    0% {
-      transform: rotate(0deg);
-    }
-    100% {
-      transform: rotate(360deg);
+  &.triangle {
+    width: 48px;
+    &:before {
+      left: 21px;
+      transform: translate(-10px, -18px);
+      animation: dotTriangle var(--duration)
+        cubic-bezier(0.785, 0.135, 0.15, 0.86) infinite;
     }
   }
 }
 
-@media screen and (max-width: 700px) {
-  .loader {
-    .spinner {
-      border: 10px solid #f3f3f3;
-      border-top: 10px solid #3498db;
-      width: 80px;
-      height: 80px;
+@keyframes pathRect {
+  25% {
+    stroke-dashoffset: 64;
+  }
+  50% {
+    stroke-dashoffset: 128;
+  }
+  75% {
+    stroke-dashoffset: 192;
+  }
+  100% {
+    stroke-dashoffset: 256;
+  }
+}
+
+@keyframes dotRect {
+  25% {
+    transform: translate(0, 0);
+  }
+  50% {
+    transform: translate(18px, -18px);
+  }
+  75% {
+    transform: translate(0, -36px);
+  }
+  100% {
+    transform: translate(-18px, -18px);
+  }
+}
+
+.loader {
+  display: inline-block;
+  margin: 0 16px;
+}
+
+// Center & dribbble
+.loader-box {
+  min-height: 100vh;
+  background-color: transparent;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  .dribbble {
+    position: fixed;
+    display: block;
+    right: 20px;
+    bottom: 20px;
+    img {
+      display: block;
+      height: 28px;
     }
   }
 }
