feat: internet check feature

--- a/src/components/auth/style.scss
+++ b/src/components/auth/style.scss
@@ -86,6 +86,6 @@
 @media screen and (max-width: 780px) {
   .auth-box {
     width: 95vw !important;
-    padding: 2em 1em !important;
+    padding: 1.5em !important;
   }
 }
