--- a/src/components/home/style.scss
+++ b/src/components/home/style.scss
@@ -33,6 +33,9 @@
       }
     }
   }
+  .loading {
+    text-align: center;
+  }
 
   .all-img {
     margin: 1em 0;
@@ -50,6 +53,7 @@
       overflow: hidden;
 
       .poster {
+        position: relative;
         aspect-ratio: 5/4;
         img {
           height: 100%;
