--- a/src/components/navbar/style.scss
+++ b/src/components/navbar/style.scss
@@ -7,10 +7,11 @@
 
   .logo {
     position: relative;
-    h1 {
+    a {
       font-size: 2rem;
       font-weight: 800;
       color: #080040;
+      cursor: pointer;
     }
   }
   .menu {
