--- a/src/components/search/style.scss
+++ b/src/components/search/style.scss
@@ -51,6 +51,7 @@
       overflow: hidden;
 
       .poster {
+        position: relative;
         aspect-ratio: 5/4;
         img {
           height: 100%;
