--- a/src/components/home/style.scss
+++ b/src/components/home/style.scss
@@ -33,9 +33,6 @@
       }
     }
   }
-  .loading {
-    text-align: center;
-  }
 
   .all-img {
     margin: 1em 0;
@@ -65,6 +62,10 @@
         text-align: center;
       }
     }
+  }
+  .all-img-nodata {
+    display: grid;
+    place-items: center;
   }
 }
 
